<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsVerActivity"
    android:layoutDirection="ltr">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/smsVerCodeHint"
        android:layout_marginTop="16dp"
        android:id="@+id/edtvercode"
        android:textSize="35sp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTimer_verSMS"
        android:layout_below="@+id/edtvercode"
        android:layout_marginTop="16dp"
        android:textSize="50sp"
        android:layout_centerInParent="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVerCodeOk"
        android:onClick="btnsabt"
        tools:ignore="OnClick"
        android:id="@+id/btnSMSVerOk"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/txtTimer_verSMS"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSendSMSAgain"
        android:layout_below="@id/btnSMSVerOk"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:onClick="txtSensSMSAgain"
        tools:ignore="OnClick" />


</RelativeLayout>